--- a/Site IZ4U/Duvidas_Lancadas.html
+++ b/Site IZ4U/Duvidas_Lancadas.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Dúvidas Lançadas</title>
-	<meta charset="utf8">
+	<meta charset="UTF-8">
 </head>
 <body>
 	<h2>Duvidas que você lançou:</h2>
