--- a/HTML/Rank.html
+++ b/HTML/Rank.html
@@ -37,7 +37,7 @@
 				        </div>
 				      </li>
 				      <li class="nav-item">
-				        <a class="nav-link disabled" href="Cadastro.html">Cadastro</a>
+				        <a class="nav-link disabled" href="Cadastro.php">Cadastro</a>
 				      </li>
 				    </ul>
 				    <form class="form-inline my-2 my-lg-0">
