--- a/HTML/lanc_duvida.html
+++ b/HTML/lanc_duvida.html
@@ -19,7 +19,7 @@
 				  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 				    <ul class="navbar-nav mr-auto">
 				      <li class="nav-item active">
-				        <a class="nav-link" href="Perfil.html">Perfil<span class="sr-only">(current)</span></a>
+				        <a class="nav-link" href="Perfil.php">Perfil<span class="sr-only">(current)</span></a>
 				      </li>
 				      <li class="nav-item">
 				        <a class="nav-link" href="Rank.html">Ranking</a>
@@ -37,12 +37,12 @@
 				        </div>
 				      </li>
 				      <li class="nav-item">
-				        <a class="nav-link disabled" href="Cadastro.html">Cadastro</a>
+				        <a class="nav-link disabled" href="Cadastro.php">Cadastro</a>
 				      </li>
 				    </ul>
 				    <form class="form-inline my-2 my-lg-0">
 				      <input class="form-control mr-sm-2" type="search" placeholder="Busca" aria-label="Search">
-				      <button class="btn btn-outline-success my-2 my-sm-0" type="submit" href="login.html">ENTRE!</button>
+				      <button class="btn btn-outline-success my-2 my-sm-0" type="submit" href="login.php">ENTRE!</button>
 				    </form>
 				  </div>
 				</nav>
