--- a/HTML/index.html
+++ b/HTML/index.html
@@ -11,8 +11,8 @@
 	<script type="text/javascript" src="../js/bootstrap.min.js"></script>
 
 </head>
-<body class="cor-pg">
-				<nav class="navbar navbar-expand-lg navbar-light bg-primary">
+<body class="">
+				<nav class="navbar navbar-expand-lg navbar-light cor-pg">
 				  <a class="navbar-brand text-dark" href="index.html">Home</a>
 				  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				    <span class="navbar-toggler-icon"></span>
@@ -21,7 +21,7 @@
 				  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 				    <ul class="navbar-nav mr-auto">
 				      <li class="nav-item active">
-				        <a class="nav-link text-dark" href="Perfil.html">Perfil<span class="sr-only">(current)</span></a>
+				        <a class="nav-link text-dark" href="Perfil.php">Perfil<span class="sr-only">(current)</span></a>
 				      </li>
 				      <li class="nav-item">
 				        <a class="nav-link text-dark" href="Rank.html">Ranking</a>
@@ -31,24 +31,31 @@
 				          Duvidas
 				        </a>
 				        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-				          <a class="dropdown-item text-white" href="lanc_duvida.html">Lançar Duvida</a>
-				          <a class="dropdown-item text-white" href="duv_lanc.html">Duvidas Lancadas</a>
-				          <a class="dropdown-item text-white" href="resp_lanc.html">Respostas Lancadas</a>
+				          <a class="dropdown-item text-dark" href="lanc_duvida.html">Lançar Duvida</a>
+				          <a class="dropdown-item text-dark" href="duv_lanc.html">Duvidas Lancadas</a>
+				          <a class="dropdown-item text-dark" href="resp_lanc.html">Respostas Lancadas</a>
 				          <div class="dropdown-divider"></div>
 				          <a class="dropdown-item text-dark" href="Resul_busc.html">Procurar Duvidas</a>
 				        </div>
 				      </li>
 				      <li class="nav-item">
-				        <a class="nav-link disabled text-dark" href="Cadastro.html">Cadastro</a>
+				        <a class="nav-link disabled text-dark" href="Cadastro.php">Cadastro</a>
 				      </li>
 				    </ul>
 				    <form class="form-inline my-2 my-lg-0">
 				      <input class="form-control mr-sm-2 " type="search" placeholder="Busca" aria-label="Search">
-				      <button class="btn btn-secondary btn-lg active " type="submit"><a href="login.html">Entre</a></button>
+				      <button class="btn btn-secondary btn-lg active " type="submit"><a href="login.php">Entre</a></button>
 				    </form>
 				  </div>
 				  </div>
 				</nav>
+	<section>
+		<h1>Sobre o IZ4U</h1>
+		<h2>RESUMO</h2>
+		<p>Esta Aplicação vem pra facilitar o dia a dia dos alunos na Unieuro, tentando Sancionar o maior numero de duvidas possíveis</p>
+		
 
+
+	</section>
 </body>
 </html>
